[gd_scene load_steps=6 format=3 uid="uid://lixt22ias30n"]

[ext_resource type="Script" path="res://player.gd" id="1_0b23y"]
[ext_resource type="Texture2D" uid="uid://bcesbl5l7ymj8" path="res://masashi9.png" id="2_n2840"]
[ext_resource type="Texture2D" uid="uid://lb6t6fslwxxj" path="res://starMasashi.png" id="3_26cvf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fee0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n2840")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("2_n2840")
}, {
"duration": 0.4,
"texture": ExtResource("3_26cvf")
}],
"loop": true,
"name": &"star",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxf5d"]
radius = 21.0
height = 68.0

[node name="player" type="Area2D"]
script = ExtResource("1_0b23y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_fee0v")
animation = &"star"
autoplay = "star"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xxf5d")

[node name="StarTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
